--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
       rel="stylesheet"
       type="text/css"
     />
